remove scrollbar to fix shifting when modal opens

--- a/app/frontend/css/master.less
+++ b/app/frontend/css/master.less
@@ -25,9 +25,8 @@
 
 @import "../less/instrument-header";
 
+
 html {
-  overflow: -moz-scrollbars-vertical;
-  overflow: scroll;
   background-color: #1a1a1a;
 }
 
